--- a/templates/index.html
+++ b/templates/index.html
@@ -9,32 +9,33 @@
     <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
-    <div class="login">
-        <h1>Predict CO2 Emission of Vehicles</h1>
-        <h3>Enter the following values to predict the CO2 emission from the vehicle</h3>
+    <div class="main">
+        <div class="header">
+            <h1>Predict CO2 Emission of Gasoline Vehicles</h1>
+        </div>
+        <h3>Enter the following values to predict the CO2 emission</h3>
 
         <!-- Main Input For Receiving Query to our ML -->
         <form action="{{ url_for('predict') }}" method="post">
             <input type="text" name="feature1" placeholder="Engine Size" required="required" />
             <input type="text" name="feature2" placeholder="Cylinders" required="required" />
-            <input type="text" name="feature3" placeholder="Fuel Consumption (Comb)" required="required" />
+            <input type="text" name="feature3" placeholder="Fuel Consumption" required="required" />
 
             <button type="submit" class="btn">Predict</button>
         </form>
+        <h3>{{ best_model }}</h3>
+        <h3>{{ best_prediction }}</h3>
+    </div>
 
-        <br>
-        <br>
-        <h3>{{ linear_prediction }}</h3>
-        <h3>{{ ridge_prediction }}</h3>
-        <h3>{{ lasso_prediction }}</h3>
-        <h3>{{ elastic_net_prediction }}</h3>
-
+    <div class="buttons">
+        <!-- Two buttons on the right -->
+        <button class="btn-left">Compare</button>
+        <a href="{{ url_for('graph_representation') }}" class="btn-right">Efficiency</a>
     </div>
 
 </body>
-
 </html>
