--- a/static/css/graph.css
+++ b/static/css/graph.css
@@ -2,7 +2,9 @@
 html { width: 100%; height:100%; overflow:hidden; }
 body {
     font-family: 'Nathanos', sans-serif;
-    max-width: 800px;
+    /* max-width: 1000px; */
+    /* max-width: fit-content; */
+    /* max-height: fit-content; */
     font-size: 18px;
     margin: 0 auto;
     padding: 30px;
@@ -103,4 +105,9 @@ label {
 /* Style for dropdown when hovering */
 .select-make-dropdown select {
     background-color: #4169E1;
+}
+
+.chart-container {
+    height: 500px; /* Adjust the height as needed */
+    overflow: auto;
 }
