--- a/templates/compare.html
+++ b/templates/compare.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <a class="btn" href="{{ url_for('index') }}">Home</a>
     <h1>Compare Vehicle Models</h1>
     <form method="POST" action="/compare">
         <label for="make1">Select Make 1:</label>
@@ -67,33 +68,39 @@
     <br><br>
 
     <!-- Display the specs for selected models -->
-    {% if specs1 %}
-    <h2>Model 1 Specs:</h2>
-    <ul>
-        <li>Make: {{ specs1['Make'] }}</li>
-        <li>Model: {{ specs1['Model'] }}</li>
-        <li>Fuel Consumption Comb (L/100 km): {{ specs1['Fuel Consumption Comb (L/100 km)'] }}</li>
-        <li>CO2 Emissions (g/km): {{ specs1['CO2 Emissions (g/km)'] }}</li>
-        <li>Engine Size (L): {{ specs1['Engine Size (L)'] }}</li>
-        <li>Cylinders: {{ specs1['Cylinders'] }}</li>
-        <li>Vehicle Class: {{ specs1['Vehicle Class'] }}</li>
-        <li>Transmission: {{ specs1['Transmission'] }}</li>
-    </ul>
-    {% endif %}
-
-    {% if specs2 %}
-    <h2>Model 2 Specs:</h2>
-    <ul>
-        <li>Make: {{ specs2['Make'] }}</li>
-        <li>Model: {{ specs2['Model'] }}</li>
-        <li>Fuel Consumption Comb (L/100 km): {{ specs2['Fuel Consumption Comb (L/100 km)'] }}</li>
-        <li>CO2 Emissions (g/km): {{ specs2['CO2 Emissions (g/km)'] }}</li>
-        <li>Engine Size (L): {{ specs2['Engine Size (L)'] }}</li>
-        <li>Cylinders: {{ specs2['Cylinders'] }}</li>
-        <li>Vehicle Class: {{ specs2['Vehicle Class'] }}</li>
-        <li>Transmission: {{ specs2['Transmission'] }}</li>
-    </ul>
-    {% endif %}
+    <div class="results-container">
+        <!-- Model 1 Specs -->
+        {% if specs1 %}
+        <div class="result">
+            <h2>Specs of ({{ specs1['Model'] }}):</h2>
+            <ul>
+                <li>Make: {{ specs1['Make'] }}</li>
+                <li>Fuel Consumption Comb (L/100 km): {{ specs1['Fuel Consumption Comb (L/100 km)'] }}</li>
+                <li>CO2 Emissions (g/km): {{ specs1['CO2 Emissions (g/km)'] }}</li>
+                <li>Engine Size (L): {{ specs1['Engine Size (L)'] }}</li>
+                <li>Cylinders: {{ specs1['Cylinders'] }}</li>
+                <li>Vehicle Class: {{ specs1['Vehicle Class'] }}</li>
+                <li>Transmission: {{ specs1['Transmission'] }}</li>
+            </ul>
+        </div>
+        {% endif %}
+    
+        <!-- Model 2 Specs -->
+        {% if specs2 %}
+        <div class="result">
+            <h2>Specs of ({{ specs2['Model'] }}):</h2>
+            <ul>
+                <li>Make: {{ specs2['Make'] }}</li>
+                <li>Fuel Consumption Comb (L/100 km): {{ specs2['Fuel Consumption Comb (L/100 km)'] }}</li>
+                <li>CO2 Emissions (g/km): {{ specs2['CO2 Emissions (g/km)'] }}</li>
+                <li>Engine Size (L): {{ specs2['Engine Size (L)'] }}</li>
+                <li>Cylinders: {{ specs2['Cylinders'] }}</li>
+                <li>Vehicle Class: {{ specs2['Vehicle Class'] }}</li>
+                <li>Transmission: {{ specs2['Transmission'] }}</li>
+            </ul>
+        </div>
+        {% endif %}
+    </div>
 </body>
 
 </html>
