--- a/templates/graph.html
+++ b/templates/graph.html
@@ -26,7 +26,7 @@
 
     <!-- Container for displaying the scatter plot -->
     <div class="chart-container">
-        <canvas id="fuelConsumptionScatterPlot" width="800" height="600"></canvas>
+        <canvas id="fuelConsumptionScatterPlot" width="1000" height="800"></canvas>
 
         {% if not selected_make %}
             <p class="no-make-selected">Please select a make to display the scatter plot.</p>
@@ -70,11 +70,12 @@
                     data: dataPoints,  // Use the dataPoints array
                     backgroundColor: 'red',  // Set dot color
                     borderColor: 'rgba(0, 123, 255, 1)',  // Set dot border color
-                    pointRadius: 4,  // Set dot radius
+                    pointRadius: 4,  // Set dot radius to 0 (no dots)
                 }]
             },
             options: {
-                responsive: true, 
+                responsive: true,
+                maintainAspectRatio: false, // Disable aspect ratio
                 scales: {
                     x: {
                         type: 'category',  // Set x-axis as category axis for company names
@@ -84,7 +85,7 @@
                             color: 'black',
                             font: {
                                 size: 20,
-                                weight: 600
+                                weight: 800
                             }
                         }
                     },
@@ -96,7 +97,7 @@
                             color: 'black',
                             font: {
                                 size: 20,
-                                weight: 600
+                                weight: 800
                             }
                         }
                     }
@@ -107,12 +108,15 @@
                         text: `Fuel Consumption Scatter Plot for ${selectedMake}`,
                         color: 'black',
                         font: {
-                            size: 20
+                            size: 25,
+                            weight: 600
                         }
                     },
                 }
             }
         });
+
+        scatterPlot.resize();
     </script>
     
 </body>
