--- a/static/css/graph.css
+++ b/static/css/graph.css
@@ -108,6 +108,7 @@ label {
 }
 
 .chart-container {
-    height: 500px; /* Adjust the height as needed */
+    height: 600px; /* Adjust the height as needed */
     overflow: auto;
+    margin: 10px auto;
 }
