entire code base refactored and optimized, along with adding calculation of error percentage

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -72,7 +72,7 @@
         <!-- Model 1 Specs -->
         {% if specs1 %}
         <div class="result">
-            <h2>Specs of ({{ specs1['Model'] }}):</h2>
+            <h2>Specs of {{ specs1['Model'] }}:</h2>
             <ul>
                 <li>Make: {{ specs1['Make'] }}</li>
                 <li>Fuel Consumption Comb (L/100 km): {{ specs1['Fuel Consumption Comb (L/100 km)'] }}</li>
@@ -88,7 +88,7 @@
         <!-- Model 2 Specs -->
         {% if specs2 %}
         <div class="result">
-            <h2>Specs of ({{ specs2['Model'] }}):</h2>
+            <h2>Specs of {{ specs2['Model'] }}:</h2>
             <ul>
                 <li>Make: {{ specs2['Make'] }}</li>
                 <li>Fuel Consumption Comb (L/100 km): {{ specs2['Fuel Consumption Comb (L/100 km)'] }}</li>
